    * src/prefsdlg.c:
    * src/Makefile.am:
      Mockup of the new preferences dialog, available in
      Edit -> Preferences (Experimental).
      
    * src/display_itdb.c:
      gtkpod.track_add_extra.typo.awn.1.patch by Andrew W. Nosenko
      <andrew.w.nosenko@gmail.com>:
      
      Fix typo, avoid re-creating ExtraTrackData if it already exists
      as consequence.

2007-12-19 Matvey Kozhev <sikon at users.sourceforge.net>

	* COPYING-DOCS:
	  Text of the GFDL 1.2. Documentation should be under the GFDL to
	  ensure that it remains license-compatible with the wiki.
	
	* doc/gtkpod.xml:
	  Initial, very incomplete documentation import from the wiki.
	  
	  Do not modify the HTML files directly. They are generated from
	  the DocBook XML file. Use "make update-docs" to regenerate them.
	
	* Makefile.am:
	* doc/Makefile.am:
	  Added the update-docs rule to generate HTML documentation from XML.
	  
	* src/misc.c:
	* src/misc.h:
	  Moved open_about_window to help.c.
	  
	* src/help.c:
	* src/help.h:
	* src/gtkpod.glade:
	  Support for help contents, online help, and report bug menus.
	  
	  To use context-sensitive help, call gtkpod_open_help_context
	  (in help.h) using the ID of the chapter or sect1 in the DocBook/XML
	  file as the context. It will first try to open the XML file in yelp
	  (the GNOME help viewer), and if that fails, will open the
	  corresponding HTML file in the browser.
	  
	* src/misc_confirm.c:
	* src/file_itunesdb.c:
	* src/misc_playlist.c:
	* src/fetchcover.c:
	  More message box HIGification.

2007-12-18 Matvey Kozhev <sikon at users.sourceforge.net>

	* src/confirmation.c:
	* src/confirmation.h:
	  Added the gtkpod_confirmation_hig and gtkpod_confirmation_simple
	  functions for HIG-compliant confirmation messages.
	  
    * src/file_itunesdb.c:
      Migrated the "directory structure" dialog to the HIG functions.

2007-12-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* configure.in: