@@ -12,6 +12,15 @@
       
       Fix typo, avoid re-creating ExtraTrackData if it already exists
       as consequence.
+      
+    * src/charset.c:
+    * src/clientserver.c:
+    * src/prefs_window.c:
+    * src/prefs_window.h:
+      gtkpod.gcc-warn.awn.1.patch_[zeT1qb].gcc-warn.awn.1.patch
+      by Andrew W. Nosenko:
+      
+      Eliminate some GCC warnings.
 
 2007-12-19 Matvey Kozhev <sikon at users.sourceforge.net>
 
